--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@
                             <div class="portfolio-hover">
                                 <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/01-thumbnail.jpg" alt="" />
+                            <img class="img-fluid" src="img/xml3.png" alt="" />
                         </a>
                         <div class="portfolio-caption">
-                            <div class="portfolio-caption-heading">Card One</div>
+                            <div class="portfolio-caption-heading">Our Company Website</div>
                             <div class="portfolio-caption-subheading text-muted">...</div>
                         </div>
                     </div>
@@ -100,10 +100,10 @@
                             <div class="portfolio-hover">
                                 <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/01-thumbnail.jpg" alt="" />
+                            <img class="img-fluid" src="img/saedx-blog-featured-70.jpg" alt="" />
                         </a>
                         <div class="portfolio-caption">
-                            <div class="portfolio-caption-heading">Card Two</div>
+                            <div class="portfolio-caption-heading">404</div>
                             <div class="portfolio-caption-subheading text-muted">...</div>
                         </div>
                     </div>
@@ -115,10 +115,10 @@
                             <div class="portfolio-hover">
                                 <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/01-thumbnail.jpg" alt="" />
+                            <img class="img-fluid" src="img/saedx-blog-featured-70.jpg" alt="" />
                         </a>
                         <div class="portfolio-caption">
-                            <div class="portfolio-caption-heading">Card Three</div>
+                            <div class="portfolio-caption-heading">404</div>
                             <div class="portfolio-caption-subheading text-muted">...</div>
                         </div>
                     </div>
@@ -141,14 +141,13 @@
                         <div class="col-lg-8">
                             <div class="modal-body">
                                 <!-- Project Details Go Here-->
-                                <h2 class="text-uppercase">Project Name</h2>
-                                <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                                <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/01-full.jpg" alt="" />
-                                <p class="text-paragraph">Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                                <h2 class="text-uppercase">Our Company Website</h2>
+                                <img class="img-fluid d-block mx-auto" src="img/xml3.png=" alt="" />
+                                <p class="text-paragraph">Our Company website is one of the first of many Websites we as a company ever work on. This website give you a insite on what we are as a company. </p>
                                 <ul class="list-inline text-paragraph">
-                                    <li>Date: January 2020</li>
-                                    <li>Client: Threads</li>
-                                    <li>Category: Illustration</li>
+                                    <li>Date: August 2020</li>
+                                    <li>Client: XML3</li>
+                                    <li>Category: Information </li>
                                 </ul>
                                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                                     <i class="fas fa-times mr-1"></i>
@@ -172,14 +171,14 @@
                         <div class="col-lg-8">
                             <div class="modal-body">
                             <!-- Project Details Go Here-->
-                            <h2 class="text-uppercase">Project Name</h2>
-                            <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                            <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/01-full.jpg" alt="" />
-                            <p class="text-paragraph">Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                            <h2 class="text-uppercase">????</h2>
+                            <p class="item-intro text-muted">????</p>
+                            <img class="img-fluid d-block mx-auto" src="img/cVu5jx.gif" alt="" />
+                            <p class="text-paragraph"></p>
                             <ul class="list-inline text-paragraph">
-                                <li>Date: January 2020</li>
-                                <li>Client: Threads</li>
-                                <li>Category: Illustration</li>
+                                <li>Date: ????</li>
+                                <li>Client: ????</li>
+                                <li>Category: ????</li>
                             </ul>
                                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                                     <i class="fas fa-times mr-1"></i>
@@ -202,16 +201,16 @@
                     <div class="row justify-content-center">
                         <div class="col-lg-8">
                             <div class="modal-body">
-                        <!-- Project Details Go Here-->
-                        <h2 class="text-uppercase">Project Name</h2>
-                        <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                        <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/01-full.jpg" alt="" />
-                        <p class="text-paragraph">Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
-                        <ul class="list-inline text-paragraph">
-                            <li>Date: January 2020</li>
-                            <li>Client: Threads</li>
-                            <li>Category: Illustration</li>
-                        </ul>
+                      <!-- Project Details Go Here-->
+                      <h2 class="text-uppercase">????</h2>
+                      <p class="item-intro text-muted">????</p>
+                      <img class="img-fluid d-block mx-auto" src="img/cVu5jx.gif" alt="" />
+                      <p class="text-paragraph"></p>
+                      <ul class="list-inline text-paragraph">
+                          <li>Date: ????</li>
+                          <li>Client: ????</li>
+                          <li>Category: ????</li>
+                      </ul>
                                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                                     <i class="fas fa-times mr-1"></i>
                                     Close Project
