--- a/index.html
+++ b/index.html
@@ -245,8 +245,7 @@
 					<div class="heading-section heading-section-white p-4 pl-md-0 py-md-5 pr-md-5">
 						<span class="subheading">Wilcon A Construction Company</span>
 						<h2 class="mb-4">Best Provider for Industrial Services</h2>
-						<h4>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</h4>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean</p>
+						<h4>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</h4					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean</p>
 					</div>
 				</div>
 				<div class="col-md-6 d-flex align-items-center">
