--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 			<div class="row no-gutters d-flex">
 				<div class="col-lg-4 d-flex align-self-stretch ftco-animate">
 					<div class="media block-6 services d-flex">
-						<div class="icon justify-content-center align-items-center d-flex"><span class="flaticon-004-safe"></span></div>
+						<div class="icon justify-content-center align-items-center d-flex"><span class="flaticon-095-responsive-webpage"></span></div>
 						<div class="media-body pl-4">
 							<h3 class="heading mb-3">Quality Construction</h3>
 							<p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
